# minimal-diffusion

./: README.md
deployment-local/: .env  compose.yaml
minimal_ddpm/: Dockerfile.local  README.md  main.py  pyproject.toml
minimal_ddpm/assets/result/: log.csv
minimal_ddpm/minimal_ddpm/: data.py  model.py
vae/: README.md
