[project]
name = "minimal-ddpm"
version = "0.1.0"
description = "A minimal implementation of Denoising Diffusion Probabilistic Models for self-study"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "torch>=2.7.1",
]

[tool.ruff]
line-length = 120
